--- a/MIS/Views/CriminalRecord/Index.cshtml
+++ b/MIS/Views/CriminalRecord/Index.cshtml
@@ -24,7 +24,18 @@
                     <li><a href="#" class="dropdown-item">Closed</a></li>
                 </ul>
             </li>
+
         </ul>
+    </div>
+    <div class="d-inline-flex p-md-5">
+        <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchForm">
+            <div class="search">
+                <input type="search" class="search-input" placeholder="Search..." name="Name">
+                <button type="submit" class="search-icon" value="Filter">
+                    <i class="fa fa-search"></i>
+                </button>
+            </div>
+        </form>
     </div>
 </div>
 
@@ -56,18 +67,9 @@
 
             </thead>
 
-        </table>
+        </table>*@
 
 
-        <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchForm">
-            <div class="search">
-                <input type="search" class="search-input" placeholder="Search..." name="Name">
-                <button type="submit" class="search-icon" value="Filter">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
-        </form>
-    </div>*@
 
 
 <partial name="_Records" />
