--- a/MIS/Views/CriminalRecord/Details.cshtml
+++ b/MIS/Views/CriminalRecord/Details.cshtml
@@ -1,8 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
+
 
 @using MIS.Model
 @using MSI.Model
@@ -10,29 +9,16 @@
 
 @{CriminalRecord criminalRecord = null; }
 
+
 @foreach (var item in Model)
 {
-    <div class="row p-2" > 
-        <div class="col-lg-3 col-md-2 col-sm-2 col-xs-5" style="text-align:center;">
-            @*<form asp-controller="CriminalRecord" asp-action="SetStatus">
-                <input type="hidden" value="1" name="enumValue" />
-                <input type="hidden" value="@item.CriminalRecord.Id"  name="criminalRecordId"/>*@
-                <button id="enableButton" type="submit" onclick="modifyStatusEnable()" class="form-control btn-primary">Enable</button>
-            @*</form>*@
-        </div>
-    
-        <div class="col-lg-3 col-md-2 col-sm-2 col-xs-5" style="text-align:center;">
-            @*<form asp-controller="CriminalRecord" asp-action="SetStatus">
-                <input type="hidden" value="0" name="enumValue" />
-                <input type="hidden" value="@item.CriminalRecord.Id" name="criminalRecordId" />*@
-                <button id="disableButton" onclick="modifyStatusDisable()" type="submit" class="form-control btn-primary">Disable</button>
-            @*</form>*@
-        </div>
+    <div class="row p-5">
+
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-5" style="text-align:center;">
             <h3 id="recordStatus"> Record Status : @item.CriminalRecord.Status </h3>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-5" style="text-align:center;">
-            <h3 id="recordType" > Type : @item.CriminalRecord.Type </h3>
+            <h3 id="recordType"> Type : @item.CriminalRecord.Type </h3>
         </div>
     </div>
 
@@ -43,8 +29,6 @@
     criminalRecord = @item.CriminalRecord;
     break;
 }
-
-
 
 <form asp-controller="CriminalRecord" asp-action="AddPolicemanToACriminalRecord">
     <div class="row">
@@ -61,10 +45,37 @@
 
 </form>
 
-    <input type="text" id="newValueType" value="@Model.ElementAt(0).CriminalRecord.Type" />
-    <button class="btn btn-submit" onclick="modifyType()"> Submit</button>
+<input type="text" id="newValueType" value="@Model.ElementAt(0).CriminalRecord.Type" />
+<button class="btn btn-submit" onclick="modifyType()"> Submit</button>
+
+<a href="#editDetails"  data-toggle="modal" data-target="#editDetails">Edit Details </a>
 
 
+
+@if (Model.ElementAt(0).Policeman != null)
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Seniority</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+
+                <tr>
+                    <td>@item.Policeman.Name</td>
+                    <td>@item.Policeman.Email</td>
+                    <td>@item.Policeman.Seniority</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+}
 
 <div id="policemenList" style="display:none">
     @foreach (var item in Model)
@@ -87,6 +98,51 @@
     }
 
 </div>
+
+<div>
+    <h4>
+        Multiple File Upload
+    </h4>
+    <form asp-controller="CriminalRecord" asp-action="FileInModel" enctype="multipart/form-data">
+
+        <input type="hidden" name="criminalRecordId" value="@criminalRecord.Id" />
+        <input type="text" name="DocumentDTO.Name" />
+        <input type="file" name="DocumentDTO.File" />
+        <button type="submit"> Submit </button>
+    </form>
+</div>
+
+
+<div class="modal fade" id="editDetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <form>
+                    <div class="btn btn-sm">
+                        <button id="enableButton" type="submit" onclick="modifyStatusEnable()" class="form-control btn-primary">Enable</button>
+                    </div>
+
+                    <div class="btn btn-sm">
+                        <button id="disableButton" onclick="modifyStatusDisable()" type="submit" class="form-control btn-primary">Disable</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div>
+
+            @foreach (var item in ViewData["documents"] as IList<Document>)
+            {
+                <div>
+                    <img src="@item.Path" width="200" height="200" asp-append-version="true"/>
+                    <a asp-controller="CriminalRecord" asp-action="DeleteDocument" asp-route-documentId="@item.Id" asp-route-criminalRecordId="@criminalRecord.Id"> Delete </a>
+                </div>
+            }
+    </div>
+
 
 <script>
 
